# flashcards

./: .gitignore  CMakeLists.txt  README.md  app.rc  data_parse.cpp  data_parse.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  source.csv  tester.qml
android/: AndroidManifest.xml
